fdo#49655 dmapper: fix default page style layout

The default in Writer is mirrored, but in Word it's left and right.

Change-Id: I8c615a3a18ad7493deb2a3a9369c13f3e4d5799d